--- a/20231009_homeC_study/20231009_homeC_study.vcxproj
+++ b/20231009_homeC_study/20231009_homeC_study.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="stopwatch.c" />
+    <ClCompile Include="SW_test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
